index.html image added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Google</title>
 </head>
 <body>
-    hi
+    <img src="Google.jpg" alt="Google logo">
+    <button>Search Me</button>
 </body>
 </html>
