--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img src="Google.jpg" alt="Google logo">
-    <button>Search Me</button>
+    <input type="text">
+    <div>
+        <button>Google Search</button>
+        <button>I'm feeling lucky</button>
+    </div>
 </body>
 </html>
